Added SILENTSTRYKERS changes because he is having issues, linked search and single card view screens

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:theme="@style/Theme.CuriousCurators"
         tools:targetApi="31">
 
-
+        <activity
+            android:name=".SingleCardActivity"
+            android:exported="true" />
         <activity
             android:name=".SearchActivity"
             android:exported="true" />
