--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         android:theme="@style/Theme.CuriousCurators"
         tools:targetApi="31">
 
+        <activity android:name=".CollectionView" />
+
         <activity
             android:name=".SingleCardActivity"
             android:exported="true" />
